--- a/json_serializable/pubspec.yaml
+++ b/json_serializable/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   json_annotation: '>=1.2.0 <1.3.0'
   meta: ^1.1.0
   path: ^1.3.2
-  source_gen: ^0.9.0
+  source_gen: ^0.9.1+2
 
 dev_dependencies:
   build_runner: ^0.10.0
